# xfers-python-sdk

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: publish.yml
examples/: balance.py  bank.py  payment_link.py  persistent_virtual_account.py  virtual_account.py
landx_xfers_sdk/: __init__.py  _config.py  _extract_params.py  _xfers_param_injector.py  xfers.py  xfers_error.py
landx_xfers_sdk/models/balance/: balance.py
landx_xfers_sdk/models/bank/: bank.py
landx_xfers_sdk/models/bank/entity/: bank_account.py
landx_xfers_sdk/models/payment/entity/: payment.py
landx_xfers_sdk/models/payment_link/: __init__.py  payment_link.py
landx_xfers_sdk/models/payment_link/entity/: payment_link.py
landx_xfers_sdk/models/payment_methods/: __init__.py
landx_xfers_sdk/models/payment_methods/entity/: manage_payment_method.py  payment_method.py  payment_methods.py
landx_xfers_sdk/network/: __init__.py
xfers_sdk/: _api_requestor.py  _post_attributes.py
xfers_sdk/models/: __init__.py
xfers_sdk/models/balance/: balance.py
xfers_sdk/models/balance/entity/: balance.py
xfers_sdk/models/bank/: bank.py
xfers_sdk/models/bank/entity/: bank.py
xfers_sdk/models/disbursements/: __init__.py  disbursements.py
xfers_sdk/models/disbursements/entity/: disbursements.py
xfers_sdk/models/payment/: payment.py
xfers_sdk/models/payment_link/: payment_link.py
xfers_sdk/models/payment_methods/: payment_methods.py
xfers_sdk/network/: xfers_response.py
