[tool.poetry]
name = "xfers-sdk"
version = "0.1.0"
description = ""
authors = ["LandX Engineering <tech@landx.id>"]

[tool.poetry.dependencies]
python = "^3.9"
pyhumps = "^3.5.3"
requests = "^2.27.1"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
